<resources>
    <string name="app_name">SunnyDays</string>
    <string name="welcome">Welcome!</string>
    <string name="location">Location</string>
    <string name="field_empty">Field must not be empty</string>
    <string name="now_in">Now in</string>
    <string name="location_not_found">Location not found.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="no_data_available_swipe_to_refresh">No data available, swipe to refresh</string>
    <string name="wind_speed_label">Wind</string>
    <string name="wind_speed_unit">km/h</string>
    <string name="humidity_label">Humidity</string>
    <string name="humidity_unit">%</string>
    <string name="pressure_label">Pressure</string>
    <string name="pressure_unit">hPa</string>
    <string name="current_weather">Current</string>
    <string name="today_forecast">today\'s forecast</string>
    <string name="forecast">Forecast</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="exit">Press again to exit the app</string>
    <string name="details">Details</string>
    <string name="today">Today</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="one_day_forecast">Hourly</string>
    <string name="daily_forecast">Daily</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="wind">Wind</string>
    <string name="speed">Speed</string>
    <string name="orientation">Orientation</string>
    <string name="other">Other</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="seven_days_forecast">7 days</string>
    <string name="fourteen_days_forecast">14 days</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="settings">Settings</string>
    <string name="custom">Custom</string>
    <string name="getting_location">Getting location</string>
    <string name="error_getting_location">Error getting location</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add_location">Add location</string>
    <string name="saving_location">Saving location</string>
    <string name="error_saving_location">Error saving location</string>
    <string name="location_saved">Location saved</string>
    <string name="twenty_four_hours">24 hours</string>
    <string name="forty_hours_forecast">40 hours</string>
    <string name="hourly_forecast">Hourly</string>
    <string name="delete">sterge</string>
    <string name="delete_location">Are you shure you want to delete this location?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="deleting_location">Deleting location.</string>
    <string name="error_deleting_location">Error deleting location.</string>
    <string name="success_deleting_location">Success deleting the location.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="enter_a_specific_location_so_we_can_set_up_your_weather_forecast_data">Enter a specific location, so we can set up your weather forecast data.</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
</resources>
