<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/forecast">
            <menu>
                <item
                    android:id="@+id/action_current_weather"
                    android:checkable="true"
                    android:checked="true"
                    android:icon="@drawable/ic_clear"
                    android:title="@string/current_weather" />
                <item
                    android:id="@+id/action_forecast"
                    android:checkable="true"
                    android:icon="@drawable/calendar_clock"
                    android:title="@string/one_day_forecast" />
                <item
                    android:id="@+id/action_daily_forecast"
                    android:checkable="true"
                    android:icon="@drawable/calendar_range"
                    android:title="@string/daily_forecast" />
            </menu>
        </item>

        <item
            android:id="@+id/action_location"
            android:checkable="true"
            android:icon="@drawable/ic_earth_black_24dp"
            android:title="@string/location" />
        <item
            android:id="@+id/action_settings"
            android:checkable="true"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>
</menu>