<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="@dimen/title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        android:text="@string/enter_a_specific_location_so_we_can_set_up_your_weather_forecast_data"
        android:textSize="@dimen/medium_size_text" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/weather_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin"
        android:src="@drawable/chevron_right"
        android:tint="@color/white" />

</LinearLayout>